--- a/polls/templates/polls/results.html
+++ b/polls/templates/polls/results.html
@@ -1,9 +1,32 @@
+{% load static %}
 <h1>{{ question.question_text }}</h1>
-
+<style>
+    .button {
+      border: none;
+      color: white;
+      padding: 15px 32px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
+      margin: 4px 2px;
+      cursor: pointer;
+    }
+    
+    .button1 {background-color: #4CAF50;} /* Green */
+    .button2 {background-color: #008CBA;} /* Blue */
+    </style>
+<link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}">
 <ul>
+    <table width="20%">
 {% for choice in question.choice_set.all %}
-    <li>{{ choice.choice_text }} -- {{ choice.votes }} vote{{ choice.votes|pluralize }}</li>
+        <tr>
+            <td>{{ choice.choice_text }}</td>
+            <td>{{ choice.votes }}</td>
+          </tr>
 {% endfor %}
+    </table>
 </ul>
 
-<a href="{% url 'polls:detail' question.id %}">Vote again?</a>
+<a href="{% url 'polls:detail' question.id %}"button class="button button2">Vote again?</a><br>
+<a href="{% url 'polls:index' %}"button class="button button1">Back to List of Polls</button></a>
