--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,47 +1,43 @@
 {% load static %}
-<style>
-    .button {
-        border: none;
-        color: white;
-        padding: 15px 32px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 16px;
-        margin: 4px 2px;
-        cursor: pointer;
-    }
-
-    .button1 {
-        background-color: #4CAF50;
-    }
-
-    /* Green */
-    .button2 {
-        background-color: #008CBA;
-    }
-
-    /* Blue */
-</style>
-<link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}">
+<link href="{% static 'polls/style.css' %}" rel="stylesheet" type="text/css">
+{% if user.is_authenticated %}
+   Welcome back, {{ user.username }}
+    <a href="{% url 'logout' %}">Logout</a>
+{% else %}
+   Please <a href="{% url 'login' %}">Login</a>
+{% endif %}
 {% if latest_question_list %}
 <ul>
+    {% for question in latest_question_list %}
+    <br>
+    <br>
+    <body style="color:yellow;"> {{ question.question_text }}
+    {% if question.can_vote %}
+    <a href="{% url 'polls:results' question.id %}">
+        <button type="button">{{"results"}}</button>
+    </a>
+    <a href="{% url 'polls:detail' question.id %}">
+        <button type="button">{{"vote"}}</button>
+    </a>
+    {% else %}
+    <a href="{% url 'polls:results' question.id %}">
+        <button type="button">{{"results"}}</button>
+    </a>
+    {% endif %}
+    {% endfor %}
+    </body>
+
     {% if messages %}
     <ul class="messages">
         {% for msg in messages %}
-        <b class="{{msg.tags}}">{{ msg }}</b>
+        <li class="{{msg.tags}}">{{ msg }}</li>
         {% endfor %}
     </ul>
     {% endif %}
-    {% for question in latest_question_list %}
-    <li>{{ question.question_text }}</li>
-    {% if question.can_vote %}
-    <a href="{% url 'polls:detail' question.id %}" button class="button button1">Vote</button></a>
-    <a href="{% url 'polls:results' question.id %}" button class="button button2">Results</button></a>
-    {% else %}
-    <a href="{% url 'polls:results' question.id %}" button class="button button2">Results</button></a>
-    {% endif %}
-    {% endfor %}
     {% else %}
     <p>No polls are available.</p>
+
+
     {% endif %}
+
+</ul>
