--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -23,7 +23,9 @@
 {% csrf_token %}
 {% for choice in question.choice_set.all %}
     <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}">
-    <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br>
+    <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label>
+     {% if request.session.choice == choice.id %} - previous choice.{% endif %}
+     <br>
 {% endfor %}
 <input type="submit" value="Vote">
 </form>
